<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/singleplayerbutton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/primary_accent"
        android:layout_marginTop="200dp"
        android:text="@string/single" />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/multi"
        android:id="@+id/multiplayerbutton"
        android:background="@drawable/menu_button"
        android:layout_below="@+id/singleplayerbutton"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:layout_centerHorizontal = "true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/multi_disabled"
        android:layout_below="@+id/multiplayerbutton"
        android:layout_centerHorizontal= "true"
        android:text="@string/multi_disabled"
        android:textColor="@color/number_text"
        android:textSize="12sp"/>
    <Button
        android:id="@+id/logoutbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="26dp"
        android:text="@string/logoutbutton" />


</RelativeLayout>