<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/easy"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_accent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/easy" />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:background="@color/primary_accent"
        android:id="@+id/medium"
        android:layout_below="@+id/easy"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:layout_centerHorizontal = "true" />
    <Button
        android:id="@+id/hard"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_accent"
        android:layout_below="@+id/medium"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/hard" />


</RelativeLayout>