<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/search"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/primary_accent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="153dp"
        android:text="@string/search" />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/create"
        android:background="@color/primary_accent"
        android:layout_below="@+id/search"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal = "true" />

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout android:id="@+id/screen_wait" style="@style/LLScreen">
        <TextView style="@style/Blurb" android:text="@string/please_wait" />
    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout android:id="@+id/invitation_popup" style="@style/InvPopup">
        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
            style="@style/InvPopupButton"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>
    <!-- GAMEPLAY SCREEN -->
    <LinearLayout android:id="@+id/screen_game" style="@style/LLScreen">
        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/SudokuGridView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sudoku_grid_background"
            android:padding="3dp"
            android:numColumns="9"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="12dp"
            android:verticalSpacing="3dp"
            android:horizontalSpacing="2dp"
            android:stretchMode="columnWidth" />
    </LinearLayout>
</RelativeLayout>


